k8s/service-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
        - name: service-c
          image: service-c:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: service-c
spec:
  selector:
    app: service-c
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
