k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-a-ingress
spec:
  rules:
    - http:
        paths:
          - path: /submit
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 3000

          - path: /status
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 3000
